--- a/style.css
+++ b/style.css
@@ -53,10 +53,21 @@ body{
 
 .math-tricks-area{
     width: 100%;
-    background-color: rgb(221, 154, 28);
-    /* height: 500px; */
+    background-color: gray;
+    height: 500px;
     color: white;
     /* margin-top: 80px; */
+}
+
+.start-button{
+    margin-left: 600px;
+    margin-top: 100px;
+    font-family: cursive;
+    font-size: 30px;
+    width: 150px;
+    height: 50px;
+    background-color: white;
+    color: black;
 }
 
 .about-area{
@@ -77,9 +88,26 @@ body{
     height: 200px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px gray;
+    box-shadow: 5px 5px 5px rgb(156, 156, 156);
     margin-left: 425px;
     margin-top: 40px;
+}
+
+.start-button{
+    display: block;
+}
+
+.highlighter{
+    color: orange;
+    font-size: 25px;
+}
+
+#first-card{
+    display: none;
+}
+
+#second-card, #third-card, #fourth-card, #fifth-card, #sixth-card, #seventh-card, #eight-card{
+    display: none;
 }
 
 .tricks-card h3, p{
