--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@ body{
 }
 
 .top-area{
-    background-color: rgb(238, 234, 234);
+    background-color: rgb(37, 159, 175);
     width: 100%;
     height: 80px;
-    /* position: fixed;
-    margin-top: 0; */
+    border-bottom: 2px solid orange;
 }
 
 .nav-content{
@@ -26,11 +25,12 @@ body{
 
 .nav-content h3{
     color: orange;
+    font-family: cursive;
 }
 
 .nav-content ul{
     list-style-type: none;
-    padding-left: 400px;
+    padding-left: 300px;
 }
 
 .nav-content li{
@@ -42,6 +42,8 @@ body{
     color: orange;
     padding: 10px;
     font-size: 20px;
+    font-family: cursive;
+    text-transform: uppercase;
 }
 
 .nav-content a:hover{
@@ -53,21 +55,22 @@ body{
 
 .math-tricks-area{
     width: 100%;
-    background-color: gray;
+    background-color: rgb(37, 159, 175);
     height: 500px;
     color: white;
-    /* margin-top: 80px; */
 }
 
 .start-button{
-    margin-left: 600px;
-    margin-top: 100px;
-    font-family: cursive;
-    font-size: 30px;
     width: 150px;
     height: 50px;
-    background-color: white;
-    color: black;
+    border-radius: 10px;
+    background-color: rgb(37, 159, 175);
+    border: 2px solid orange;
+    color: white;
+    font-size: 25px;
+    font-family: cursive;
+    padding: 5px;
+    margin: 100px 600px;
 }
 
 .about-area{
